--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,44 +3,27 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-<!--  <link href="../static/css/style.css" th:href="@{/css/styles.css}" rel="stylesheet" type="text/css"/>-->
   <link th:href="@{/css/styles.css}" rel="stylesheet" />
-
   <meta charset="UTF-8">
-  <title>Registration / Login </title>
-
-<!--  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"-->
-<!--        rel="stylesheet"-->
-<!--        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"-->
-<!--        crossorigin="anonymous">-->
+  <title> Registration / Login </title>
 </head>
 
 <body>
-<!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
-<!--  <div class="container-fluid">-->
-<!--    <a class="navbar-brand" th:href="@{/index}">Registration and Login System</a>-->
-<!--    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--      <span class="navbar-toggler-icon"></span>-->
-<!--    </button>-->
-<!--    <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-<!--      <ul class="navbar-nav me-auto mb-2 mb-lg-0">-->
-<!--        <li class="nav-item">-->
-<!--          <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>-->
-<!--        </li>-->
-<!--      </ul>-->
-<!--    </div>-->
-<!--  </div>-->
-</nav>
-<br /><br />
-<div>
-  <div>
-    <h1> Registration and Login System </h1>
-  </div>
+
+<main>
+
+  <section id="logPage">
+
+    <div>
+      <h1>Pay My Buddy</h1>
+    </div>
+
   <div>
     <button class="blueButton" type="button" onclick=window.location.href="/register">Register</button>
     <button class="blueButton" type="button" onclick=window.location.href="/login">Login</button>
   </div>
 
-</div>
+</section>
+</main>
 </body>
 </html>
