--- a/src/main/resources/templates/profileEdition.html
+++ b/src/main/resources/templates/profileEdition.html
@@ -57,10 +57,7 @@
                         class="form-control"
                         id="firstname"
                         name="firstname"
-                        th:value="*{firstname}"
-                        th:field="${firstname}"
-                        type="text"
-                />
+                        th:value="${firstname}"/>
            </div>
 
  <!--           <div class="ligne">
