--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -21,7 +21,7 @@
             <a href="/user/transfer">Transfer</a>
             <a href="#" class="pageEnCours">Profile</a>
             <a href="/user/contact">Contact</a>
-            <a href="/user/logoff">Log off</a>
+            <a href="/logoff">Log off</a>
         </ul>
     </div>
 </nav>
