Add contact with error messages

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,7 +23,7 @@
             <a href="/user/transfer">Transfer</a>
             <a href="/user/profile">Profile</a>
             <a href="/user/contact">Contact</a>
-            <a href="/user/logoff">Log off</a>
+            <a href="/logout">Log off</a>
         </ul>
 
     </div>
