--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -23,7 +23,7 @@
             <a href="/user/transfer">Transfer</a>
             <a href="/user/profile">Profile</a>
             <a href="#" class="pageEnCours">Contact</a>
-            <a href="/logoff">Log off</a>
+            <a href="/logout">Log off</a>
         </ul>
 
     </div>
@@ -51,6 +51,7 @@
                 th:object="${email}"
         >
 
+
             <div class="ligne">
                 <label class="formulaire">Email</label>
                 <input
@@ -60,6 +61,15 @@
                         placeholder="Enter friend email"
                         type="text"
                 />
+
+                <div th:if="${param.success}">
+                    <div class="text-alert">Your friend was successfully added !</div>
+                </div>
+
+                <div th:if="${param.error}">
+                    <div class="text-alert" th:text="${message}"></div>
+                </div>
+
 
             </div>
 
@@ -83,41 +93,14 @@
                     <th>Email</th>
                 </tr>
             </head>
-           <body>
+            <body>
             <tr th:each="user: ${contacts}">
                 <td th:text="${user.firstname}"/>
                 <td th:text="${user.lastname}"/>
                 <td th:text="${user.email}"/>
             </tr>
 
-<!--            <div id="pages" aria-label="pagination">
-                <ul class="pagination">
-                    <li><a href=""><span aria-hidden="true">«</span><span class="visuallyhidden">previous set of pages</span></a></li>
-                    <li><a href=""><span class="visuallyhidden">page </span>1</a></li>
-                    <li><a href="" aria-current="page"><span class="visuallyhidden">page </span>2</a></li>
-                    <li><a href=""><span class="visuallyhidden">page </span>3</a></li>
-                    <li><a href=""><span class="visuallyhidden">page </span>4</a></li>
-                    <li><a href=""><span class="visuallyhidden">next set of pages</span><span aria-hidden="true">»</span></a></li>
-                </ul>
-            </div>-->
-
-<!--            <div id="pages" aria-label="pagination">
-                <ul class="pagination">
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1">Previous</a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item active">
-                        <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">Next</a>
-                    </li>
-                </ul>
-            </div>-->
-
-           </body>
+            </body>
         </table>
     </section>
 </main>
