--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -218,6 +218,15 @@ a.pageEnCours {
     padding-bottom:3%;
 }
 
+.row{
+	display: flex;
+	flex-direction: row;
+	justify-content:space-between;
+	align-items:center;
+	width:60%;
+
+}
+
 .formulaire{
 
 }
