--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 <head>
     <link th:href="@{/css/styles.css}" rel="stylesheet"/>
     <meta charset="UTF-8">
-    <title> Registration / Login </title>
+    <title> PayMyBuddy - Registration / Login </title>
 </head>
 
 <body>
