--- a/src/main/resources/templates/logoff.html
+++ b/src/main/resources/templates/logoff.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 <!--		<link rel="stylesheet" href="styles.css">-->
 		<link th:href="@{/css/styles.css}" rel="stylesheet" />
-		<title>Log off</title>
+		<title>PayMyBuddy - Log off</title>
 	</head>
 	
 	<body>
