--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -4,7 +4,7 @@
 >
 <head>
     <meta charset="UTF-8">
-    <title>Profile</title>
+    <title>PayMyBuddy - Profile</title>
     <link th:href="@{/css/styles.css}" rel="stylesheet"/>
 </head>
 
