--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8"/>
     <link th:href="@{/css/styles.css}" rel="stylesheet">
-    <title>Contact</title>
+    <title>PayMyBuddy - Contact</title>
 </head>
 
 <body>
@@ -64,7 +64,7 @@
             </div>
 
                 <div th:if="${param.success}">
-                    <div class="text-alert">Your friend was successfully added !</div>
+                    <div class="text-alert"th:text="${message}"></div>
                 </div>
 
                 <div th:if="${param.error}">
