--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="styles.css">
     <link th:href="@{/css/styles.css}" rel="stylesheet"/>
-    <title>Error</title>
+    <title>PayMyBuddy - Error</title>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 
 <header>
     <div id="header">
-
+        <a href="#" class="pageEnCours">Error /</a>
     </div>
 </header>
 
@@ -40,7 +40,7 @@
 
         <section id="titre1">
             <div>
-                <h2>!! Error !! </h2>
+                <h2 th:text="${message}"></h2>
             </div>
 
         </section>
