--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Registration</title>
+    <title>PayMyBuddy - Registration</title>
     <link th:href="@{/css/styles.css}" rel="stylesheet"/>
 
 </head>
