--- a/src/main/resources/templates/transfer.html
+++ b/src/main/resources/templates/transfer.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="styles.css">
     <link th:href="@{/css/styles.css}" rel="stylesheet"/>
-    <title>Transfer</title>
+    <title>PayMyBuddy - Transfer</title>
 </head>
 
 <body>
@@ -97,6 +97,7 @@
                         placeholder="0.0 €"
                         th:field="*{amount}"
                         type="number"
+                        step="0.01"
                         min="0"
                 />
             </div>
@@ -114,7 +115,7 @@
             </div>
 
             <div th:if="${param.success}">
-                <div class="text-alert">The transfer was successfully done !</div>
+                <div class="text-alert" th:text="${message}"></div>
             </div>
 
             <!--            <div th:if="${param.error}">
