--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -54,8 +54,16 @@
                         placeholder="Enter password"
                 />
             </div>
+
             <div>
-                <button type="submit" class="blueButton">Submit</button>
+                <input type="checkbox"
+                       value="lsRememberMe"
+                       id="rememberMe">
+                <label for="rememberMe">Remember me</label>
+            </div>
+
+            <div>
+                <button type="submit" class="blueButton" onclick="IsRememberMe()">Submit</button>
             </div>
         </form>
     </section>
